# Bigbob-verify

./: .env.example  .gitattributes  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
bot/: config.py  db.py  main.py  models.py  ui.py  user_state.py  worker.py
bot/api/: verification.py  webhook.py
bot/services/: purchases.py  queue.py  referrals.py  roblox.py  security.py
bot/tests/: conftest.py  test_purchases.py  test_roblox_service.py  test_security.py  test_users.py  test_verification_flow.py  test_webhook.py
bot/verification/: __init__.py  handlers.py  service.py
migrations/: env.py  script.py.mako
migrations/versions/: 202407151200_bigint_telegram_id.py  202407271230_add_user_ban_fields.py  fe6e3f55afd3_add_partial_verification_index.py
